@@ -2,6 +2,8 @@ Version 13   Live Server Fixes
 
 --Changed cost of steel walls to 30, wired wood walls to 15, and torch to 300.
 
+--Added a retry-transaction work-around for a server database deadlock in
+  endEditHouse.
 
 
 
